<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#20034c">

    <TextView
        android:id="@+id/textViewPhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_to"
        android:textColor="@color/cardview_light_background"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edt_para"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:textColor="@color/cardview_light_background"
        android:id="@+id/textViewSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_subjetc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edt_tema"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <requestFocus />
        </EditText >



    <TextView
        android:textColor="@color/cardview_light_background"
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_message"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edt_mensaje"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="5">
    <requestFocus />
    </EditText>

    <Button
        android:layout_marginTop="40dp"
        android:id="@+id/btn_enviar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_send"
        android:textColor="@color/cardview_light_background"
        android:background="#51a2ff"
        />

    <Button
        android:layout_marginTop="40dp"
        android:id="@+id/btn_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_home"
        android:textColor="@color/cardview_light_background"
        android:background="#51a2ff"
        android:layout_gravity="center_horizontal"
        android:onClick="irPrincipa"
        />

</LinearLayout>