<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20034c">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_game"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#ffffff" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/begin"
        android:background="#315e9e"
        android:textColor="@color/window_background"
        android:id="@+id/btn_empezar"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Radio"
        android:id="@+id/btn_radio"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#315e9e"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/points"
        android:background="#315e9e"
        android:textColor="@color/window_background"
        android:id="@+id/btn_puntuar"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/out"
        android:background="#315e9e"
        android:textColor="@color/window_background"
        android:id="@+id/btn_salir"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Galeria"
        android:id="@+id/btn_galeria"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#315e9e"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Linterna"
        android:id="@+id/btn_lin"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#315e9e"
        android:textColor="#ffffff" />

</LinearLayout>