<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#20034c">

    <TextView
        android:id="@+id/titulo_informacion_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/title_developer"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/accentColor"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true"
        >

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="@dimen/espacio_norma_1"
            android:rowCount="2">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="@dimen/espacio_norma_2"
                android:src="@drawable/usuario" />

            <TextView
                android:id="@+id/texto_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="32dp"
                android:text="Roman Muñoz Zuñiga"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@drawable/email" />

            <TextView
                android:id="@+id/texto_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="roman.mz.cr7@gmail.com"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </GridLayout>
    </android.support.v7.widget.CardView>



    <TextView
        android:id="@+id/titulo_uni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/espacio_norma_2"
        android:paddingTop="@dimen/espacio_norma_1"
        android:text="Institucion"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/accentColor"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/espacio_norma_1">

            <ImageView
                android:id="@+id/icono_uni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@drawable/uni_mini" />

            <TextView
                android:id="@+id/texto_uni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_toRightOf="@+id/icono_uni"
                android:text="@string/utng_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/titulo_materia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/espacio_norma_2"
        android:paddingTop="@dimen/espacio_norma_1"
        android:text="@string/title_topic"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/accentColor"
        android:textSize="15dp"
        android:textStyle="bold"
        />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/espacio_norma_1">

            <ImageView
                android:id="@+id/icono_asig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@drawable/folder_code" />

            <TextView
                android:id="@+id/texto_asignatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@+id/icono_asig"
                android:text="@string/topic_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/titulo_catedratico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/espacio_norma_2"
        android:paddingTop="@dimen/espacio_norma_1"
        android:text="Profesor"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/accentColor"
        android:textSize="15dp"
        android:textStyle="bold"
        />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/espacio_norma_1">

            <ImageView
                android:id="@+id/icono_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@drawable/usuario" />

            <TextView
                android:id="@+id/texto_cate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@+id/icono_cat"
                android:text="@string/name_master"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>